--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dev_dependencies:
 
   mockito: ^5.4.2
   build_runner: ^2.4.11
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
