--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dev_dependencies:
   dartz: ^0.10.1
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
+  get_it: ^7.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
